# aron-core/src/main/java/cz/aron/domain/facets/dto/FacetType.java
@@ -6,5 +6,6 @@ public enum FacetType {
     ENUM,
     MULTI_REF,
     UNITDATE,
-    MULTI_REF_EXT
+    MULTI_REF_EXT,
+    MULTI_TYPE_REF
 }
